Bug fix: Detail in list pages run out of room
On ratings/list pages show film details in a dropdown (which actually
slides to sidem not down). On TV episodes the detail area is too tall.
The doesn't match the poster image. The fix is to use less padding on
the top.

--- a/css/rs.css
+++ b/css/rs.css
@@ -84,6 +84,7 @@ detail {
     float: left;
     vertical-align: middle;
     padding: 15px;
+    padding-top: 5px;
     padding-bottom: 5px;
 }
 
